<resources>
    <string name="app_name">Fitbit</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="register_text">No account? Sign up now!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="file">"Welcome"</string>
    <string name="account_actions">"Account Actions"</string>
    <string name="create_new">"Create new"</string>
    <string name="open">"Open"</string>
    <string name="login_submit">"Login"</string>
    <string name="logout_submit">"Logout"</string>
    <string name="username">"Username"</string>
    <string name="nav_open">"Navigation Open"</string>
    <string name="nav_close">"Navigation Close"</string>
    <string name="password">"Password"</string>
    <string name="retype_password">"Retype Password"</string>
    <string name="email">"Email"</string>
    <string name="create_account">"Create an Account"</string>
    <string name="already_member">"Already a member?"</string>
    <string name="register">"Register to Fitbit"</string>
    <string name="edit_profile">"Edit your profile"</string>
    <string name="name">"Name"</string>
    <string name="surname">"Surname"</string>
    <string name="birthday">"Birthday"</string>
    <string name="height">"Height"</string>
    <string name="gender">"Gender"</string>
    <string name="telephone">"Telephone"</string>
    <string name="address">"Address"</string>
    <string name="meters">"m"</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="submit">"Submit"</string>
    <string name="change_password">"Change Password"</string>
    <string name="new_password">"New Password"</string>
    <string name="old_password">"Old Password"</string>
    <string name="weight">"Weight"</string>
    <string name="kilos">"Kg"</string>
    <string name="save">"Save"</string>
    <string name="deny_permission">"Deny permission"</string>
    <string name="accept_permission">"Accept permission"</string>
    <string name="specialist_permission">"Specialist's permission"</string>
    <string name="pending_acceptance">"Pending Acceptance"</string>
    <string name="already_accepted">"Request Accepted"</string>
    <string name="history_heartbeat">"History Heartbeat"</string>
</resources>
