<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_graph1"
            android:checked="false"
            android:icon="@drawable/ic_graph"
            android:title="Live graph" />
        <item
            android:id="@+id/nav_history_calories"
            android:checked="false"
            android:icon="@drawable/ic_chart2"
            android:title="History Calories" />
        <item
            android:id="@+id/nav_history_heartbeat"
            android:checked="false"
            android:icon="@drawable/ic_chart2"
            android:title="@string/history_heartbeat" />
        <item
            android:id="@+id/nav_permissions"
            android:checked="false"
            android:icon="@drawable/ic_permission"
            android:title="@string/specialist_permission" />


    </group>
    <item android:title="@string/account_actions">
        <menu>
            <item android:id="@+id/edit_profile_menu"
                android:checked="false"
                android:icon="@drawable/ic_person"
                android:title="@string/edit_profile" />

            <item android:id="@+id/change_password"
                android:icon="@drawable/ic_lock"
                android:checked="false"
                android:title="@string/change_password" />

            <item android:id="@+id/logout_menu"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_submit" />
        </menu>
    </item>
</menu>