<?xml version="1.0" encoding="utf-8"?>
<ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/retype_password"
                    app:layout_constraintEnd_toStartOf="@+id/editTextRePasswordEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditProfile"
                    app:srcCompat="@drawable/ic_lock" />

            <EditText
                    android:id="@+id/editTextRePasswordEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/retype_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorLink="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditProfile" />

            <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/retype_password"
                    app:layout_constraintEnd_toStartOf="@+id/editTextPasswordEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:srcCompat="@drawable/ic_lock" />

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/edit_profile"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <EditText
                    android:id="@+id/editTextPasswordEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorLink="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                    android:id="@+id/editTextNameEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextRePasswordEditProfile" />

            <EditText
                    android:id="@+id/editTextSurnameEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNameEditProfile"
                    android:importantForAutofill="no" />

            <EditText
                    android:id="@+id/editTextBirthdayEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/birthday"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSurnameEditProfile"
                    android:importantForAutofill="no" />

            <EditText
                    android:id="@+id/editTextHeightEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/height"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="@+id/editTextBirthdayEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextBirthdayEditProfile" />

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/meters"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/editTextHeightEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextBirthdayEditProfile" />

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/name"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/editTextNameEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextRePasswordEditProfile"
                    app:srcCompat="@drawable/ic_person" />

            <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/surname"
                    app:layout_constraintEnd_toStartOf="@+id/editTextSurnameEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNameEditProfile"
                    app:srcCompat="@drawable/ic_person" />

            <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/birthday"
                    app:layout_constraintEnd_toStartOf="@+id/editTextBirthdayEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSurnameEditProfile"
                    app:srcCompat="@drawable/ic_calendar" />

            <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/height"
                    app:layout_constraintEnd_toStartOf="@+id/editTextHeightEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextBirthdayEditProfile"
                    app:srcCompat="@drawable/ic_height" />

            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/editTextHeightEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextHeightEditProfile">

                <RadioButton
                        android:id="@+id/radioButtonIsMaleEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                <RadioButton
                        android:id="@+id/radioButtonIsFemaleEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

            </RadioGroup>

            <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/male"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextHeightEditProfile"
                    app:srcCompat="@drawable/ic_sex" />

            <EditText
                    android:id="@+id/editTextEmailEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    android:importantForAutofill="no" />

            <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/email"
                    app:layout_constraintEnd_toStartOf="@+id/editTextEmailEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:srcCompat="@drawable/ic_mail" />

            <EditText
                    android:id="@+id/editTextTelephoneEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/telephone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmailEditProfile" />

            <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/telephone"
                    app:layout_constraintEnd_toStartOf="@+id/editTextTelephoneEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmailEditProfile"
                    app:srcCompat="@drawable/ic_phone" />

            <EditText
                    android:id="@+id/editTextAddressEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTelephoneEditProfile"
                    android:importantForAutofill="no" />

            <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/address"
                    app:layout_constraintEnd_toStartOf="@+id/editTextAddressEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTelephoneEditProfile"
                    app:srcCompat="@drawable/ic_address" />

            <Button
                    android:id="@+id/buttonEditProfileSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextAddressEditProfile" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>