<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/retype_password"
                app:layout_constraintEnd_toStartOf="@+id/editTextOldPasswordChangePassword"
                app:layout_constraintTop_toTopOf="@+id/editTextOldPasswordChangePassword"
                app:srcCompat="@drawable/ic_lock" />

        <EditText
                android:id="@+id/editTextOldPasswordChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/old_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEditProfile" />

        <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/retype_password"
                app:layout_constraintEnd_toStartOf="@+id/editTextRePasswordChangePassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordChangePassword"
                app:srcCompat="@drawable/ic_lock" />

        <EditText
                android:id="@+id/editTextRePasswordChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/retype_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordChangePassword" />

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/retype_password"
                app:layout_constraintEnd_toStartOf="@+id/editTextPasswordChangePassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextOldPasswordChangePassword"
                app:srcCompat="@drawable/ic_lock" />

        <TextView
                android:id="@+id/textViewEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/change_password"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/editTextPasswordChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextOldPasswordChangePassword" />

        <Button
                android:id="@+id/changePasswordSumbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRePasswordChangePassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>